# snake-rust-wasm

./: Cargo.toml  LICENSE  README.md  index.html  main.js
src/: lib.rs
