[package]
name = "snake"
version = "0.1.0"
authors = ["Michael Farquhar <michaelfarquhar1991@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
wasm-bindgen = "0.2.58"
wee_alloc = { version = "0.4.5", optional = true }
